правки после замечаний 13.02

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "less/main.less",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -33,6 +33,7 @@
         "less/base.less",
         "less/buttons.less",
         "less/icons.less",
+        "less/layout.less",
         "less/header.less",
         "less/footer.less",
         "less/maintable.less",
